Adding waypoints, scroll functionality

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,18 +1,25 @@
 {% extends "base.html" %} {% block content %}
-<div class="main-content">
-  <div class="page-width">
-    <h1>🥤Oakland Agency</h1>
-    <p>
-      A basic Gulp boilerplate to get developing locally with a few helpful
-      tools already set up.
-    </p>
-  </div>
-</div>
-<div class="container">
+<div id="top"></div>
+<div class="container-o hero">
   <div class="row">
-    <div class="col-6">
-      <h1>Test</h1>
+    <div class="col-12">
+      <h1>Oakland<br/>Agency</h1>
+      <div id="basic-waypoint"></div>
     </div>
   </div>
+</div>
+
+<div id="about" class="container-o">
+  <div class="row">
+    <div class="col-12">
+      <h2>About</h2>
+      <p>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/></p>
+    </div>
+  </div>
+</div>
+
+<div>
+  <h2>Section 2</h2>
+  <p>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/>Test<br/></p>
 </div>
 {% endblock %}
