Adding thank you page.

--- a/src/pages/thankyou.html
+++ b/src/pages/thankyou.html
@@ -2,7 +2,7 @@
 <div class="main-content">
   <div class="page-width">
     <h1>Page 2</h1>
-    <p>Test</p>
+    <p><a href="index.html">Back</a></p>
   </div>
 </div>
 {% endblock %}
