--- a/src/pages/thankyou.html
+++ b/src/pages/thankyou.html
@@ -1,8 +1,11 @@
 {% extends "base.html" %} {% block content %}
-<div class="main-content">
-  <div class="page-width">
-    <h1>Page 2</h1>
-    <p><a href="index.html">Back</a></p>
+<div class="container-o">
+  <div class="row thankyou">
+    <div class="col-12">
+      <h1>Thank you!</h1>
+      <p>We've recieved your message and we'll be in touch as soon as possible.</p>
+      <p><a href="/index.html">Return home</a></p>
+    </div>
   </div>
 </div>
 {% endblock %}
