--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,42 +1,68 @@
 {% extends "base.html" %} {% block content %}
 <header>
   <div class="container-o header-flex">
-      <div class="logo">
-          <a href="#top"><img src="/images/logo.png" alt="Oakland Agency Logo"></a>
-      </div>
-      <nav class="animate__fadeIn animate__animated animate__delay-2-7s">
-          <ul>
-              <li><a href="#about">About</a></li>
-              <li><a href="#services">Services</a></li>
-              <li><a href="#clients">Clients</a></li>
-              <li><a href="#contact">Contact</a></li>
-          </ul>
-      </nav>
+    <div class="logo">
+      <a href="#top"><img src="/images/logo.png" alt="Oakland Agency Logo"></a>
+    </div>
+    <nav class="animate__fadeIn animate__animated animate__delay-2-7s">
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#clients">Clients</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
   </div>
 </header>
 
 <a class="scroll-to-top" href="#top">
-  <img src="/images/chev.svg" alt="Scroll to top of page"/>
+  <img src="/images/chev.svg" alt="Scroll to top of page" />
 </a>
 <div id="top"></div>
 <div class="container-o hero">
   <div class="row">
     <div class="col-12">
-        
-      <svg width="688" height="245" class="oak-svg" viewBox="0 0 688 245" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path class="b1 step-1" d="M112.848 50.8959C112.208 19.5359 88.016 1.7439 58.832 1.7439C30.288 1.7439 5.584 21.0719 4.816 50.8959C4.944 80.2079 26.96 100.176 58.704 100.176C89.68 100.176 111.952 81.3599 112.848 50.8959ZM58.832 89.4239C37.072 89.4239 21.072 73.0399 20.688 50.8959C21.456 27.4719 38.992 12.3679 58.704 12.3679C81.104 12.3679 96.848 28.2399 97.104 50.8959C95.824 75.2159 80.08 89.4239 58.832 89.4239Z" stroke="#DFDDD0" stroke-width="1"/>
-        <path class="b1 step-2" d="M125.253 97.9999L137.797 70.0959H179.909L191.941 97.9999H208.965L167.365 3.9199H151.749L108.741 97.9999H125.253ZM174.917 59.4719H141.893L158.917 21.3279L174.917 59.4719Z" stroke="#DFDDD0" stroke-width="1"/>
-        <path class="b1 step-3" d="M213.617 97.9999H229.489V65.3599L246.257 51.5359L287.217 97.9999H307.057L257.905 42.4479L304.497 3.9199H284.529L229.489 49.1039V3.9199H213.617V97.9999Z" stroke="#DFDDD0" stroke-width="1"/>
-        <path class="b1 step-4" d="M309.352 97.9999H383.72V86.9919H325.096V3.9199H309.352V97.9999Z" stroke="#DFDDD0" stroke-width="1"/>
-        <path class="b1 step-5" d="M403.003 97.9999L415.547 70.0959H457.659L469.691 97.9999H486.715L445.115 3.9199H429.499L386.491 97.9999H403.003ZM452.667 59.4719H419.643L436.667 21.3279L452.667 59.4719Z" stroke="#DFDDD0" stroke-width="1"/>
-        <path class="b1 step-6" d="M492.775 97.9999H508.647V25.1679L565.223 97.9999H582.119V3.9199H566.247V75.7279L509.927 3.9199H492.775V97.9999Z" stroke="#DFDDD0" stroke-width="1"/>
-        <path class="b1 step-7" d="M610.129 14.5439H629.585C657.745 14.5439 670.289 24.3999 670.417 50.2559C670.289 72.5279 658.641 86.2239 639.441 87.1199H610.129V14.5439ZM594.385 97.9999H637.905C668.881 97.8719 686.289 79.5679 686.289 50.1279C686.289 21.8399 668.625 3.9199 636.241 3.9199H594.385V97.9999Z" stroke="#DFDDD0" stroke-width="1"/>
-        <path class="b1 step-8" d="M18.128 241L30.672 213.096H72.784L84.816 241H101.84L60.24 146.92H44.624L1.616 241H18.128ZM67.792 202.472H34.768L51.792 164.328L67.792 202.472Z" stroke="#DFDDD0" stroke-width="1"/>
-        <path class="b1 step-9" d="M200.499 191.464H153.651C153.651 192.36 153.651 201.064 153.651 201.96H185.011C183.859 220.904 170.803 232.808 151.091 232.808C127.283 232.808 114.227 218.6 114.227 194.024C114.227 170.856 128.179 154.984 150.963 154.984C167.475 154.984 179.763 163.56 183.347 176.488H199.091C194.739 157.672 175.155 144.744 150.963 144.744C118.963 144.744 97.843 165.224 97.843 193.896C97.715 223.208 118.835 243.176 150.195 243.176C165.171 243.176 177.715 238.824 186.419 228.968L188.211 241H200.371L200.499 191.464Z" stroke="#DFDDD0" stroke-width="1"/>
-        <path class="b1 step-10" d="M209.108 241H290.132V230.12H224.98V197.864H282.068V187.112H224.98V157.8H289.492V146.92H209.108V241Z" stroke="#DFDDD0" stroke-width="1"/>
-        <path class="b1 step-11" d="M300.65 241H316.522V168.168L373.098 241H389.994V146.92H374.122V218.728L317.802 146.92H300.65V241Z" stroke="#DFDDD0" stroke-width="1"/>
-        <path class="b1 step-12" d="M452.692 144.744C419.924 144.744 399.444 164.584 399.444 194.152C399.444 223.464 419.668 243.176 451.54 243.176C477.396 243.176 494.932 229.096 499.54 205.8H483.924C480.596 222.824 468.692 232.168 452.436 232.168C429.012 232.168 415.828 217.96 415.828 194.024C415.828 170.472 429.396 155.368 452.692 155.368C467.412 155.368 479.06 162.536 482.9 175.464H498.772C494.164 157.672 475.22 144.744 452.692 144.744Z" stroke="#DFDDD0" stroke-width="1"/>
-        <path class="b1 step-13" d="M537.359 241H553.359V202.216L595.599 146.92H577.807L545.423 190.312L513.167 146.92H494.991L537.359 202.344V241Z" stroke="#DFDDD0" stroke-width="1"/>
+
+      <svg width="688" height="245" class="oak-svg" viewBox="0 0 688 245" fill="none"
+        xmlns="http://www.w3.org/2000/svg">
+        <path class="b1 step-1"
+          d="M112.848 50.8959C112.208 19.5359 88.016 1.7439 58.832 1.7439C30.288 1.7439 5.584 21.0719 4.816 50.8959C4.944 80.2079 26.96 100.176 58.704 100.176C89.68 100.176 111.952 81.3599 112.848 50.8959ZM58.832 89.4239C37.072 89.4239 21.072 73.0399 20.688 50.8959C21.456 27.4719 38.992 12.3679 58.704 12.3679C81.104 12.3679 96.848 28.2399 97.104 50.8959C95.824 75.2159 80.08 89.4239 58.832 89.4239Z"
+          stroke="#DFDDD0" stroke-width="1" />
+        <path class="b1 step-2"
+          d="M125.253 97.9999L137.797 70.0959H179.909L191.941 97.9999H208.965L167.365 3.9199H151.749L108.741 97.9999H125.253ZM174.917 59.4719H141.893L158.917 21.3279L174.917 59.4719Z"
+          stroke="#DFDDD0" stroke-width="1" />
+        <path class="b1 step-3"
+          d="M213.617 97.9999H229.489V65.3599L246.257 51.5359L287.217 97.9999H307.057L257.905 42.4479L304.497 3.9199H284.529L229.489 49.1039V3.9199H213.617V97.9999Z"
+          stroke="#DFDDD0" stroke-width="1" />
+        <path class="b1 step-4" d="M309.352 97.9999H383.72V86.9919H325.096V3.9199H309.352V97.9999Z" stroke="#DFDDD0"
+          stroke-width="1" />
+        <path class="b1 step-5"
+          d="M403.003 97.9999L415.547 70.0959H457.659L469.691 97.9999H486.715L445.115 3.9199H429.499L386.491 97.9999H403.003ZM452.667 59.4719H419.643L436.667 21.3279L452.667 59.4719Z"
+          stroke="#DFDDD0" stroke-width="1" />
+        <path class="b1 step-6"
+          d="M492.775 97.9999H508.647V25.1679L565.223 97.9999H582.119V3.9199H566.247V75.7279L509.927 3.9199H492.775V97.9999Z"
+          stroke="#DFDDD0" stroke-width="1" />
+        <path class="b1 step-7"
+          d="M610.129 14.5439H629.585C657.745 14.5439 670.289 24.3999 670.417 50.2559C670.289 72.5279 658.641 86.2239 639.441 87.1199H610.129V14.5439ZM594.385 97.9999H637.905C668.881 97.8719 686.289 79.5679 686.289 50.1279C686.289 21.8399 668.625 3.9199 636.241 3.9199H594.385V97.9999Z"
+          stroke="#DFDDD0" stroke-width="1" />
+        <path class="b1 step-8"
+          d="M18.128 241L30.672 213.096H72.784L84.816 241H101.84L60.24 146.92H44.624L1.616 241H18.128ZM67.792 202.472H34.768L51.792 164.328L67.792 202.472Z"
+          stroke="#DFDDD0" stroke-width="1" />
+        <path class="b1 step-9"
+          d="M200.499 191.464H153.651C153.651 192.36 153.651 201.064 153.651 201.96H185.011C183.859 220.904 170.803 232.808 151.091 232.808C127.283 232.808 114.227 218.6 114.227 194.024C114.227 170.856 128.179 154.984 150.963 154.984C167.475 154.984 179.763 163.56 183.347 176.488H199.091C194.739 157.672 175.155 144.744 150.963 144.744C118.963 144.744 97.843 165.224 97.843 193.896C97.715 223.208 118.835 243.176 150.195 243.176C165.171 243.176 177.715 238.824 186.419 228.968L188.211 241H200.371L200.499 191.464Z"
+          stroke="#DFDDD0" stroke-width="1" />
+        <path class="b1 step-10"
+          d="M209.108 241H290.132V230.12H224.98V197.864H282.068V187.112H224.98V157.8H289.492V146.92H209.108V241Z"
+          stroke="#DFDDD0" stroke-width="1" />
+        <path class="b1 step-11"
+          d="M300.65 241H316.522V168.168L373.098 241H389.994V146.92H374.122V218.728L317.802 146.92H300.65V241Z"
+          stroke="#DFDDD0" stroke-width="1" />
+        <path class="b1 step-12"
+          d="M452.692 144.744C419.924 144.744 399.444 164.584 399.444 194.152C399.444 223.464 419.668 243.176 451.54 243.176C477.396 243.176 494.932 229.096 499.54 205.8H483.924C480.596 222.824 468.692 232.168 452.436 232.168C429.012 232.168 415.828 217.96 415.828 194.024C415.828 170.472 429.396 155.368 452.692 155.368C467.412 155.368 479.06 162.536 482.9 175.464H498.772C494.164 157.672 475.22 144.744 452.692 144.744Z"
+          stroke="#DFDDD0" stroke-width="1" />
+        <path class="b1 step-13"
+          d="M537.359 241H553.359V202.216L595.599 146.92H577.807L545.423 190.312L513.167 146.92H494.991L537.359 202.344V241Z"
+          stroke="#DFDDD0" stroke-width="1" />
       </svg>
 
     </div>
@@ -163,7 +189,7 @@
   </div>
   <div class="row spacer-title">
     <div class="col-sm-6 col-md-4 col-12">
-      <div class="client-image">
+      <div class="client-image" data-micromodal-trigger="modal-1" role="button">
         <img loading=lazy src="/images/clinic1.jpg" alt="Clinic 1 image" />
       </div>
       <div class="client-content">
@@ -247,4 +273,31 @@
     </div>
   </div>
 </div>
+
+<div class="modal micromodal-slide" id="modal-1" aria-hidden="false">
+  <div class="modal__overlay" tabindex="-1" data-micromodal-close="">
+    <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
+      <div class="modal__header">
+        <h5>Clinic 1</h5>
+        <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+      </div>
+      <div class="modal__content" id="modal-1-content">
+        <div class="row">
+          <div class="col-6">
+            
+            <div>
+              <img width="100%" loading=lazy src="/images/clinic1.jpg" alt="Clinic 1 image" />
+            </div>
+          </div>
+          <div class="col-6">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 {% endblock %}
