New updates for Oakland.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -20,6 +20,12 @@
 </a>
 <div id="top"></div>
 <div class="container-o hero">
+  <div class="video-hero animate__fadeIn animate__animated">
+    <video autoplay muted loop playsinline>
+      <source src="/images/showreel.mp4" type=video/mp4>
+    </video>
+  </div>
+  <div class="vid-hero-bg"></div>
   <div class="row">
     <div class="col-12">
 
@@ -181,53 +187,131 @@
   </div>
 </div>
 
+<div class="scattered-image">
+  <div class="row1">
+    <div class="pic1">
+      <img loading=lazy src="/images/scattered-image-1.jpg" alt="">
+    </div>
+    <div class="pic2">
+      <img loading=lazy src="/images/scattered-image-2.jpg" alt="">
+    </div>
+    <div class="pic3">
+      <img loading=lazy src="/images/scattered-image-9.jpg" alt="">
+    </div>
+  </div>
+  
+  <div class="row2">
+    <div class="pic1">
+      <img loading=lazy src="/images/scattered-image-3.jpg" alt="">
+    </div>
+    <div class="pic2">
+      <img loading=lazy src="/images/scattered-image-4.jpg" alt="">
+    </div>
+  </div>
+
+  <div class="row3">
+    <div class="pic1">
+      <img loading=lazy src="/images/scattered-image-10.jpg" alt="">
+    </div>
+    <div class="pic2">
+      <img loading=lazy src="/images/scattered-image-7-w.jpg" alt="">
+    </div>
+    <div class="pic3">
+      <img loading=lazy src="/images/scattered-image-14.jpg" alt="">
+    </div>
+  </div>
+
+  <div class="row4">
+    <div class="pic1">
+      <img loading=lazy src="/images/scattered-image-6-w.jpg" alt="">
+    </div>
+    <div class="pic2">
+      <img loading=lazy src="/images/scattered-image-11.jpg" alt="">
+    </div>
+  </div>
+
+  <div class="row5">
+    <div class="pic1">
+      <img loading=lazy src="/images/scattered-image-12.jpg" alt="">
+    </div>
+    <div class="pic2">
+      <img loading=lazy src="/images/scattered-image-8-w.jpg" alt="">
+    </div>
+    <div class="pic3">
+      <img loading=lazy src="/images/scattered-image-13.jpg" alt="">
+    </div>
+  </div>
+</div>
+
 <div id="clients" class="container-o spacer opo">
   <div class="row">
     <div class="col-12">
-      <h2>Clients</h2>
+      <h2>Our Partners</h2>
     </div>
   </div>
   <div class="row spacer-title">
-    <div class="col-sm-6 col-md-4 col-12">
-      <div class="client-image" data-micromodal-trigger="modal-1" role="button">
-        <img loading=lazy src="/images/clinic1.jpg" alt="Clinic 1 image" />
-      </div>
-      <div class="client-content">
-        <p>Clinic 1</p>
-      </div>
-    </div>
-    <div class="col-sm-6 col-md-4 col-12">
+    
+    <div class="col-sm-4 col-md-3 col-4">
       <div class="client-image">
-        <img loading=lazy src="/images/kindred.jpg" alt="Kindred Road image" />
-      </div>
-      <div class="client-content">
-        <p>Kindred Road</p>
+        <img loading=lazy src="/images/logos/braveface.png" alt="Braveface logo" />
       </div>
     </div>
-    <div class="col-sm-6 col-md-4 col-12">
+    <div class="col-sm-4 col-md-3 col-4">
       <div class="client-image">
-        <img loading=lazy src="/images/brave-face.jpg" alt="Brave Face image" />
-      </div>
-      <div class="client-content">
-        <p>Brave Face</p>
+        <img loading=lazy src="/images/logos/clinic1.png" alt="Clinic 1 logo" />
       </div>
     </div>
-    <div class="col-sm-6 col-md-4 offset-md-2 col-12">
+    <div class="col-sm-4 col-md-3 col-4">
       <div class="client-image">
-        <img loading=lazy src="/images/tds.jpg" alt="The Diamond Shop image" />
-      </div>
-      <div class="client-content">
-        <p>The Diamond Shop</p>
+        <img loading=lazy src="/images/logos/clinicians.png" alt="Clinicians logo" />
       </div>
     </div>
-    <div class="col-sm-6 col-md-4 offset-sm-3 offset-md-0 col-12">
+    <div class="col-sm-4 col-md-3 col-4">
       <div class="client-image">
-        <img loading=lazy src="/images/clinicians.jpg" alt="Clinicians image" />
-      </div>
-      <div class="client-content">
-        <p>Clinicians</p>
+        <img loading=lazy src="/images/logos/elliottharrison.png" alt="Elliott Harrison logo" />
       </div>
     </div>
+    <div class="col-sm-4 col-md-3 col-4">
+      <div class="client-image">
+        <img loading=lazy src="/images/logos/etchethos.png" alt="Etch and Ethos logo" />
+      </div>
+    </div>
+    <div class="col-sm-4 col-md-3 col-4">
+      <div class="client-image">
+        <img loading=lazy src="/images/logos/hm.png" alt="HM logo" />
+      </div>
+    </div>
+    <div class="col-sm-4 col-md-3 col-4">
+      <div class="client-image">
+        <img loading=lazy src="/images/logos/kindred.png" alt="Kindred Road logo" />
+      </div>
+    </div>
+    <div class="col-sm-4 col-md-3 col-4">
+      <div class="client-image">
+        <img loading=lazy src="/images/logos/oakandbon.png" alt="Oak and Bon logo" />
+      </div>
+    </div>
+    <div class="col-sm-4 col-md-3 col-4">
+      <div class="client-image">
+        <img loading=lazy src="/images/logos/qv.png" alt="QV logo" />
+      </div>
+    </div>
+    <div class="col-sm-4 col-md-3 col-4">
+      <div class="client-image">
+        <img loading=lazy src="/images/logos/rivitalash.png" alt="Rivital Lash logo" />
+      </div>
+    </div>
+    <div class="col-sm-4 col-md-3 col-4">
+      <div class="client-image">
+        <img loading=lazy src="/images/logos/tds.png" alt="The Diamond Shop logo" />
+      </div>
+    </div>
+    <div class="col-sm-4 col-md-3 col-4">
+      <div class="client-image">
+        <img loading=lazy src="/images/logos/wholesomepet.png" alt="Wholesome Pet logo" />
+      </div>
+    </div>
+
   </div>
   <div class="row testimonials">
     <div class="col-sm-4 col-12">
