--- a/src/thankyou.html
+++ b/src/thankyou.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>My First Parcel App</title>
+    <title>Oakland Agency</title>
     <link rel="stylesheet" href="/src/sass/app.scss" />
   </head>
   <body>
