--- a/src/index.html
+++ b/src/index.html
@@ -37,8 +37,8 @@
 <div id="top"></div>
 <div class="container-o hero">
   <div class="video-hero animate__fadeIn animate__animated">
-    <video autoplay muted loop playsinline>
-      <source src="/src/images/showreel.mp4" type=video/mp4>
+    <video id="heroVideo" muted loop playsinline preload="auto">
+      <source src="/src/images/showreel.mp4" type="video/mp4">
     </video>
   </div>
   <div class="vid-hero-bg"></div>
@@ -436,6 +436,12 @@
       </div>
   </div>
 </footer>
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    var video = document.getElementById('heroVideo');
+    video.play();
+  });
+</script>
 <script src="https://kit.fontawesome.com/67c8213daa.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.min.js"></script>
