--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,7 @@
   <div class="video-hero animate__fadeIn animate__animated">
     <video id="heroVideo" muted loop playsinline preload="auto">
       <source src="/src/images/showreel.mp4" type="video/mp4">
+      <source src="/src/images/showreel.webm" type="video/webm">
     </video>
   </div>
   <div class="vid-hero-bg"></div>
