--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
 <div id="top"></div>
 <div class="container-o hero">
   <div class="video-hero animate__fadeIn animate__animated">
-    <video id="heroVideo" muted loop playsinline preload="auto">
+    <video id="heroVideo" muted loop playsinline>
       <source src="/src/images/showreel.mp4" type="video/mp4">
       <source src="/src/images/showreel.webm" type="video/webm">
     </video>
